LiveCart 1.0.1 change log (24.10.2007.)

Frontend Fixes:

* Fixed the problem with only the first search results page working (search query was dropped when going to subsequent result pages)
* Resolved XHTML and CSS validation issues
* Fixed Opera quirks
* Removed dependency for PHP's SOAP extension for the Paypal Website Payments Standard module

Backend fixes:

* Fixed a bug that caused an error when adding a new user account from backend
* Fixed problems with managing PayPal Website Payments Standard and 2CheckOut transactions in admin backend
* Fixed a bug that prevented mass actions to be applied for orders when the filter list was filtered by customer name
* Fixed a bug that caused shipment subtotal to be displayed as 0.00 for new orders until any changes were made to that shipment
* Fixed some minor data grid interface issues
* Attributes tab was not functioning correctly in case only one language was installed
* Live translation didn't work when other currency than main was active
* Do not allow to remove Administrators user group
* Public access to application directories is forbidden (applies when the application code is placed in publicly accessible directory)
* Order wasn't marked as paid after adding payment manually from backend area
* Also fixed several backend interface quirks and inconsistencies

Additions:

* E-mail template editor (multi-language support)

Improvements:

* LiveCart now works with mod_rewrite disabled as well (and also with other web servers, like IIS, etc.)
* Backend Javascript and CSS stylesheet files are glued together to make them load faster (less requests to make)
* Added new user permissions for saving user group permissions and saving templates
* Added /admin URL alias for accessing the backend
* Added ability to export translated language files
* Default store frontend layout is now 100% height
* Translation editor improvements

Translations:

* Added Latvian and Lithuanian translations